# configure.in file for X11-Basic   (c) Markus Hoffmann
# used by autoconf
#
AC_INIT([X11-Basic], [1.24], [kollo@users.sourceforge.net])
version=$PACKAGE_VERSION
vdate=`date`
AC_REVISION($Revision: 0.12 $)
AC_SUBST(version)
AC_CONFIG_HEADERS([config.h])
AH_TOP([
/* CONFIG.H (c) Markus Hoffmann  */

/* This file is part of X11BASIC, the basic interpreter for Unix/X
 * ============================================================
 * X11BASIC is free software and comes with NO WARRANTY - read the file
 * COPYING for details
 */
 
/* If X11-Basic for some reason will not compile on your system 
   you may want do uncomment some of the defines    */
     
])

#### Paths
if test "$prefix" = NONE
then
  case $host in
    *-linux-*)
      prefix=/usr
      AC_MSG_RESULT([using prefix $prefix])
      EXTRA_GCFLAGS="-pipe "
    ;;
    hppa1.1-hp-hpux11.00)
      EXTRA_CFLAGS='-O '
      EXTRA_LDFLAGS='-z '
    ;;
    *)
      prefix=$ac_default_prefix
    ;;
  esac
fi



#### PROGRAMS
# Checks for programs.
AC_CHECK_PROG(X11BASICAT, xbasic, ok, no)
if test "n$X11BASICAT" = nok; then
cat <<'EOF'
You seem to have x11basic already installed ! But I'll continue the configuration
process. Testing X11-Basic Verison:
EOF
xbasic -e version
fi

AC_PROG_CC
#AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_CPP

AC_ISC_POSIX
static=
if test "n$CC" != ngcc; then
cat <<'EOF'
Note: using gcc will improve the speed of X11-Basic significantly!
EOF
else
copt="-O3"
changequote(,)dnl
v=`gcc -v 2>&1|grep version|sed 's/^.*\([0-9]\.[0-9]\.[0-9]\).*/\1/g'`
if test `echo $v|sed 's/\.//g'` -lt 245; then
	echo "You have only version $v, please install a newer version of gcc!"
	exit 1
else
	echo "Using gcc version $v"
fi
changequote([,])dnl
fi

AC_SYS_INTERPRETER
if test "n$interpval" = nno; then
cat <<'EOF'
Your System seems not to support starting scripts with a line of
     the form `#! /usr/bin/xbasic' to select the interpreter to use for the
     script. You will have to keep that in mind !
EOF
fi

#### LIBRARIES
AC_PATH_XTRA
if test "x$no_x" = yes; then
	echo "Sorry, I can't find any trace of the X Window installation (X11) on your"
	echo "system! Please use --x-includes=DIR and --x-libraries=DIR if you have them."
	exit 1
fi
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([sys/kd.h complex.h png.h jpeglib.h pty.h errno.h fcntl.h limits.h netdb.h netinet/in.h stddef.h stdlib.h string.h sys/file.h sys/ioctl.h sys/param.h sys/socket.h sys/time.h sys/timeb.h termios.h unistd.h utime.h])



# Checks for libraries.
# `-lX11':
AC_CHECK_LIB([X11], [XOpenDisplay], xlibs="${xlibs} -lX11",,[$X_LIBS])
# `-ldl':
AC_CHECK_LIB([dl], [dlopen], [
libs="$libs -ldl"
AC_DEFINE(HAVE_LIBDL,1,[dllib])
AC_DEFINE(HAVE_DLOPEN,1,[dlopen in dllib])
])
# `-lm':
AC_CHECK_LIB([m], [sin], libs="$libs -lm")
AC_CHECK_LIB([m], [floor], AC_DEFINE(HAVE_FLOOR,1,[floor in Mathlib]))
AC_CHECK_LIB([m], [logb], AC_DEFINE(HAVE_LOGB,1,[logb in Mathlib]))
AC_CHECK_LIB([m], [sqrt], AC_DEFINE(HAVE_SQRT,1,[sqrt in Mathlib]))
AC_CHECK_LIB([m], [pow], AC_DEFINE(HAVE_POW,1,[pow in Mathlib]))
AC_CHECK_LIB([m], [expm1], AC_DEFINE(HAVE_EXPM1,1,[expm1 in Mathlib]))
AC_CHECK_LIB([m], [clog10], AC_DEFINE(HAVE_CLOG10,1,[clog10 in Mathlib]))
AC_CHECK_LIB([m], [cacos], AC_DEFINE(HAVE_CACOS,1,[cacos in Mathlib]))
AC_CHECK_LIB([m], [log1p], AC_DEFINE(HAVE_LOG1P,1,[log1p in Mathlib]))

# `-ltermcap':
#AC_CHECK_LIB([termcap], [main], libs="$libs -ltermcap")
# `-lncurses':
#AC_CHECK_LIB([ncurses], [main], libs="$libs -lncurses", [
  # `-lcurses':
#  AC_CHECK_LIB([curses], [main], libs="$libs -lcurses")
#])
AC_CHECK_LIB([pthread], [pthread_create], libs="$libs -lpthread")

# `-lasound':
AC_CHECK_LIB([asound], [snd_pcm_recover], [
libs="$libs -lasound"
AC_DEFINE(HAVE_ALSA,1,[snd_pcm_recover in asound])
],,[$libs])

# `-lpng':
#AC_CHECK_LIB([png], [png_create_read_struct], [
#libs="$libs -lpng"
#AC_DEFINE(HAVE_PNG,1,[png_create_read_struct in png])
#],,[$libs])

# `-ljpeg':
#AC_CHECK_LIB([jpeg], [jpeg_read_header], [
#libs="$libs -ljpeg"
#AC_DEFINE(HAVE_JPEG,1,[jpeg_read_header in jpeg])
#],,[$libs])

# `-lutil':
AC_CHECK_LIB([util], [forkpty], [
libs="$libs -lutil"
AC_DEFINE(HAVE_FORKPTY,1,[forkpty in libutil])
],,[$libs])

# `-lreadline':
AC_CHECK_LIB([readline], [readline], [
libs="$libs -lreadline"
AC_DEFINE(HAVE_READLINE,1,[readline in readline])
],,[$libs])


# `-llapack':
AC_CHECK_LIB([lapack], [dgelss_], [
libs="$libs -llapack"
AC_DEFINE(HAVE_LAPACK,1,[dgelss_ in lapack])
],,[$libs])

# `-lgmp':
AC_CHECK_LIB([gmp], [__gmpz_init], [
libs="$libs -lgmp"
AC_DEFINE(HAVE_GMP,1,[mpz_init in gmp])
],,[$libs])

# `-lgmp':
AC_CHECK_LIB([gmp], [__gmpz_primorial_ui], [
libs="$libs -lgmp"
AC_DEFINE(HAVE_PRIMORIAL_UI,1,[mpz_primorial_ui in gmp])
],,[$libs])

# `-lusb':
AC_CHECK_LIB([usb], [usb_open], [
libs="$libs -lusb"
AC_DEFINE(HAVE_USB,1,[usb_open in lusb])
],,[$libs])

# `-lusb-1.0':
#AC_CHECK_LIB([usb-1.0], [libusb_control_transfer], [
#libs="$libs -lusb-1.0"
#AC_DEFINE(HAVE_LIBUSB,1,[libusb_control_transfer in lusb-1.0])
#],,[$libs])

# `-lgcrypt':
#AC_CHECK_LIB([gcrypt], [gcry_check_version], [
#libs="$libs -lgcrypt"
#AC_DEFINE(HAVE_GCRYPT,1,[gcry_check_version in lgcrypt])
#],,[$libs])


# `-lSDL':
AC_CHECK_LIB([SDL], [SDL_MapRGB], AC_DEFINE(HAVE_SDL,1,[Simple Direct Media present]))
AC_CHECK_LIB([SDL_gfx], [hlineRGBA], AC_DEFINE(HAVE_SDL_GFX,1,[Simple Direct Media GFX]))

# `-lx11basic':
#AC_CHECK_LIB([x11basic], [programmlauf],,,[$X_LIBS $libs -$xlibs])
# `-ltine':
AC_CHECK_LIB([tine], [_SystemCycle],AC_DEFINE(HAVE_TINE,1,[_SystemCycle in dynamical TINE lib]),,[ -lm])
# `-lDOOCSclient':
AC_CHECK_LIB([DOOCSclient], [eq_int],AC_DEFINE(HAVE_DOOCS,1,[eq_int in dynamical DOOCS lib]),,[ -lm -lpthread -ltine])
# `-lvgagl -lvga':
AC_CHECK_LIB([vga], [main],vgalibs="-lvgagl -lvga",,[$VGA_LIBS])

libs="$libs $xlibs"

AC_SUBST(inc)
AC_SUBST(X_CFLAGS)
AC_SUBST(X_LIBS)
AC_SUBST(X_EXTRA_LIBS)
AC_SUBST(X_PRE_LIBS)

AC_TRY_LINK([#include <stdlib.h>],[atexit(exit);],[echo "atexit() found"],[
AC_TRY_LINK([#include <stdlib.h>],[on_exit(main);],[echo "using on_exit()"
def="$def -DUSE_ON_EXIT=1"],
def="$def -DNO_ATEXIT=1"
echo "You need either atexit() or on_exit() for X11Basic to work correctly!")])




#### SYSTEM
echo "Running config.guess to determine your system type..."
t=`./config.guess`
echo 'You seem to have a `'$t"'"
endian=dunno
small=0
conf="config/generic.h"
case $t in
sparc-sun-sunos*)
	echo "Congratulations! "
	AC_DEFINE(IS_BIG_ENDIAN,1,[System is big or little endian])

if test "n$CC" = ngcc; then
	regs="-fomit-frame-pointer"
else
	regs=
	copt="-O4"
fi
	;;
sparc-sun-solaris*)
	echo "A Sun with Solaris 2.x"
	AC_DEFINE(IS_BIG_ENDIAN,1,[System is big or little endian])
	AC_DEFINE(SMALL,1,[Small Memory layout])

if test "n$CC" = ngcc; then
	regs="-fomit-frame-pointer"
else
	regs=
	copt="-O4"
fi
	;;
i*86-*-linux)
	echo 'Oh, a 80x86-based Linux box... Very nice! :-)'
	regs="-fomit-frame-pointer"
	;;
i*86-*-linux-*)
	echo 'Oh, a 80x86-based Linux box... Very nice! :-)'
	regs="-fomit-frame-pointer"
	;;
armv*-*-linux-*)
	echo 'Oh no, an arm-based Linux box... Maybe the Raspberry PI. My condolences! :-)'
	regs="-fomit-frame-pointer"
	;;
i*86-*bsd*)
 	echo 'A 80x86-based BSD box...'
 	regs="-fomit-frame-pointer -ffixed-ebx -ffixed-ebp"
 	copt="-O3"
 	;;
mips-sgi-irix*)
	echo 'Wow, an SGI!'
	AC_DEFINE(IS_BIG_ENDIAN,1,[System is big or little endian])
	defs="$defs -D_BSD_SIGNALS"
	xtra="$xtra -laudio -lm"
if test "n$CC" = ngcc; then
	regs="-fomit-frame-pointer"
else
	regs=
	copt="-O2"
fi
	;;
mips-dec-ultrix*)
	echo "A DECstation..."
	AC_DEFINE(IS_BIG_ENDIAN,1,[System is big or little endian])

if test "n$CC" = ngcc; then
	regs="-fomit-frame-pointer"
else
	regs=
	copt="-O2"
fi
	;;
hppa*-hp-hpux)
	echo "A HP with HP-UX and PA-RISC processor"
	AC_DEFINE(IS_BIG_ENDIAN,1,[System is big or little endian])
	AC_DEFINE(signed,,[signed not known to compiler])
if test "n$CC" = ngcc; then
	regs="-fomit-frame-pointer"
	static="-static"
else
	echo "You need gcc on HP-UX, sorry!"
	exit 1
fi
	;;
alpha-dec-osf*)
	echo "Wow, an Alpha/OSF!"
	xtra="$xtra -ldnet_stub -lots"
	AC_DEFINE(TIMEVAL_WORKAROUND,,[Timeval workaround])

if test "n$CC" = ngcc; then
	regs="-fomit-frame-pointer"
else
	regs=
	copt="-migrate -non_shared -std1 -O5 -ifo -om"
fi
	;;
m68k-next-bsd)
	echo "A NeXTStation with NEXTSTEP and MC680x0 processor"
	AC_DEFINE(IS_BIG_ENDIAN,1,[System is big or little endian])
	
if test "n$CC" = ngcc; then
	regs="-posix -fomit-frame-pointer"
else
	regs="-posix"
	copt="-O3"
fi
	;;
*)	echo "X11Basic has not been ported to this system ($t), please let me"
	echo "know if you can compile and run it successfully!"
	echo "Determining this system's endianness and short/int sizes..."
if test "n$CC" = ngcc; then
	regs="-fomit-frame-pointer"
else
	regs=
	copt="-O2"
fi
cat > conftest.c << EOF
#include <stdio.h>
main(foo)
{
	int x;
	if (sizeof(short) != 2 || sizeof(int) != 4) return 1;
	x = 0x12345678;
	switch (*(char *)&x)
	{
	case 0x12:	puts ("big"); break;
	case 0x78:	puts ("little"); break;
	default:	puts ("dunno"); break;
	}
	return 0;
}
EOF
	$CC -o conftest conftest.c
	if endian=`./conftest`; then
		echo "Sizes are OK..."
	else
		echo "Sorry, sizeof(short),sizeof(int) must be 2,4!"
		exit 1
	fi
	rm -f ./conftest
case $endian in 
	big)	echo "You're using a big-endian processor, very good!";;
	little)	echo "You're using a little-endian processor, too bad...";;
	*)	
	echo "Your machine seems to have a weird byte-ordering format, which I can't deal"
	echo "with - sorry!."
	;;
esac
esac




# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_BLOCKS
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FNMATCH
AC_FUNC_FORK
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS([nanosleep inotify_init alarm atexit getcwd gethostbyname gettimeofday inet_ntoa]) 
AC_CHECK_FUNCS([memmove memfrob select socket strchr strdup strstr utime execvp execvpe futimens])


# Versioning
AC_DEFINE_UNQUOTED(VERSION,"$version",[Version of actual implementation])
AC_DEFINE_UNQUOTED(VERSION_DATE,"$vdate",[Date of actual compilation])

#libs=$LIBS
AC_SUBST(mandir)
AC_SUBST(regs)
AC_SUBST(def)
AC_SUBST(libs)
AC_SUBST(xtra)
AC_SUBST(copt)
AC_SUBST(static)
AC_OUTPUT([../examples/compiler/xbc.bas Makefile])
